container and scene graph implemented

--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
     <body>
         <div id = 'game'>
         </div>
-        <script type='module' src='src/canvasgame.js'></script>
+        <script type='module' src='src/main.js'></script>
 </html>
